@@ -5,6 +5,7 @@ package org.meandre.webservices.servlets;
 
 import org.meandre.configuration.CoreConfiguration;
 import org.meandre.core.store.Store;
+import org.meandre.webservices.MeandreServer;
 
 /** Provides the servlet that serves auxiliar requests mostly they deal with 
  * form generation for other services.
@@ -19,11 +20,12 @@ public class WSAuxiliarServlet extends MeandreBaseServlet {
 	
 	/** Creates the servlet to provide auxiliar information.
 	 * 
+	 * @param server The Meandre server
 	 * @param store The Meandre store to use
 	 * @param cnf The Meandre configuration to use
 	 */
-	public WSAuxiliarServlet(Store store, CoreConfiguration cnf) {
-		super(store, cnf);
+	public WSAuxiliarServlet(MeandreServer server, Store store, CoreConfiguration cnf) {
+		super(server, store, cnf);
 	}
 
 	
