@@ -5,6 +5,7 @@ package org.meandre.webservices.servlets;
 
 import org.meandre.configuration.CoreConfiguration;
 import org.meandre.core.store.Store;
+import org.meandre.webservices.MeandreServer;
 
 /** Provides the servlet that serves Publish requests.
  * 
@@ -18,11 +19,12 @@ public class WSPublishServlet extends MeandreBaseServlet {
 	
 	/** Creates the servlet to provide Publish information.
 	 * 
+	 * @param server The Meandre server
 	 * @param store The Meandre store to use
 	 * @param cnf The Meandre configuration to use
 	 */
-	public WSPublishServlet(Store store, CoreConfiguration cnf) {
-		super(store, cnf);
+	public WSPublishServlet(MeandreServer server, Store store, CoreConfiguration cnf) {
+		super(server,store, cnf);
 	}
 
 	
