@@ -7,25 +7,26 @@ import org.meandre.configuration.CoreConfiguration;
 import org.meandre.core.store.Store;
 import org.meandre.webservices.MeandreServer;
 
-/** Provides the servlet that serves Public requests.
+/** Provides the servlet that serves Server requests.
  * 
  * @author Xavier Llor&agrave;
  *
  */
-public class WSPublicServlet extends MeandreBaseServlet {
+public class WSServerServlet extends MeandreBaseServlet {
 
 	/** A default serial ID */
 	private static final long serialVersionUID = 1L;
 	
-	/** Creates the servlet to provide Public information.
+	/** Creates the servlet to provide Security information.
 	 * 
 	 * @param server The Meandre server
 	 * @param store The Meandre store to use
 	 * @param cnf The Meandre configuration to use
 	 */
-	public WSPublicServlet(MeandreServer server, Store store, CoreConfiguration cnf) {
+	public WSServerServlet(MeandreServer server, Store store, CoreConfiguration cnf) {
 		super(server,store, cnf);
 	}
+
 
 	
 
